--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   dio: ^5.4.3+1
   google_generative_ai: ^0.4.0
+  firebase_core: ^2.31.1
 
 dev_dependencies:
   flutter_test:
