--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   dio: ^5.4.3+1
   google_generative_ai: ^0.4.0
   firebase_core: ^2.31.1
+  firebase_auth: ^4.19.6
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
